set(examples h5_write)
foreach(example ${examples})
    add_executable(${example} ${example}.cpp)
    target_link_libraries(${example} ${HDF5_LIBRARIES})
    target_link_libraries(${example} ${MPI_CXX_LIBRARIES})
    add_test(NAME ${example}_native COMMAND ${CMAKE_BINARY_DIR}/bin/${example} -f $ENV{pfs}/temp/h5intent)
    add_test(NAME ${example}_h5intent COMMAND ${CMAKE_BINARY_DIR}/bin/${example} -f $ENV{pfs}/temp/h5intent)
    set_property(TEST ${example}_h5intent APPEND PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=$ENV{LD_LIBRARY_PATH}:${CMAKE_BINARY_DIR}/lib")
    set_property(TEST ${example}_h5intent APPEND PROPERTY ENVIRONMENT "HDF5_PLUGIN_PATH=${CMAKE_BINARY_DIR}/lib")
    set_property(TEST ${example}_h5intent APPEND PROPERTY ENVIRONMENT "HDF5_VOL_CONNECTOR=intent under_vol=0:under_info={}")
endforeach()